--- a/package.json
+++ b/package.json
@@ -12,25 +12,37 @@
   "description": "",
   "devDependencies": {
     "@types/convert-excel-to-json": "^1.7.2",
+    "@types/debug": "^4.1.9",
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.1",
     "@types/google-translate-api": "^2.3.3",
+    "@types/got": "^9.6.12",
     "nodemon": "^3.0.1",
+    "tailwindcss": "^3.3.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/node-rsa": "^1.1.2",
     "@vitalets/google-translate-api": "^9.2.0",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
     "convert-excel-to-json": "^1.7.0",
     "csvtojson": "^2.0.10",
+    "debug": "^4.3.4",
+    "ejs": "^3.1.9",
     "excel": "^1.0.1",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "fs": "^0.0.1-security",
+    "google-play-scraper": "^10.0.0",
     "google-translate-api": "^2.3.0",
+    "got": "^13.0.0",
+    "memoizee": "^0.4.15",
     "multer": "^1.4.5-lts.1",
-    "node-xlsx": "^0.23.0"
+    "node-rsa": "^1.1.1",
+    "node-xlsx": "^0.23.0",
+    "ramda": "^0.29.0"
   }
 }
