--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "translate-tool",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "/src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
