--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "translate-tool",
   "version": "1.0.0",
   "main": "/src/index.ts",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "start": "nodemon src/index.ts"
+    "start": "ts-node src/index.ts",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,6 +27,8 @@
     "@types/google-translate-api": "^2.3.3",
     "@types/got": "^9.6.12",
     "nodemon": "^3.0.1",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.5",
     "tailwindcss": "^3.3.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
